--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -1375,7 +1375,8 @@ body {
         max-width: 1500px;
         margin: 0 auto;
     }
-    .fullfillment_new_inner .fullfillment_new_container {
+
+    .fullfillment_new_inner .fullfillment_new_container{
         width: 130%;
         height: 100%;
         display: flex;
@@ -1386,21 +1387,33 @@ body {
         background: #ffffff00;
     }
 
+    .fullfillment_new_inner .fullfillment_new_container .fullfillment_new_container_background{
+        width: 130%;
+        border-radius: 60px;
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        gap: 0px;
+        position: relative;
+        // margin: 0px 550px;
+        
+    }
+
     /* hover */
-    #fulfillment_new .fullfillment_new_container .swiper-slide:hover {
+    #fulfillment_new .fullfillment_new_container .fullfillment_new_container_background .swiper-slide:hover {
         filter: grayscale(1);
         p {
             opacity: 1;
         }
     }
-    #fulfillment_new .fullfillment_new_container .swiper-slide:hover .txt_wrap .copy {
+    #fulfillment_new .fullfillment_new_container .fullfillment_new_container_background .swiper-slide:hover .txt_wrap .copy {
         opacity: 1;
         transform: translateX(0);
     }
-    #fulfillment_new .fullfillment_new_container .swiper-slide:hover .txt_wrap .copy:before {
+    #fulfillment_new .fullfillment_new_container .fullfillment_new_container_background .swiper-slide:hover .txt_wrap .copy:before {
         transform: translate(-10px, -50px);
     }
-    #fulfillment_new .fullfillment_new_container .swiper-slide:hover .txt_wrap .copy:after {
+    #fulfillment_new .fullfillment_new_container .fullfillment_new_container_background .swiper-slide:hover .txt_wrap .copy:after {
         transform: translate(0px, 50px) rotate(180deg);
     }
 
@@ -1481,204 +1494,208 @@ body {
             counter-reset: numbering;
             background: #fff;
         }
-        .swiper-slide {
-            position: relative;
-            z-index: 9999;
-            counter-increment: numbering;
-            @include flex(column, nowrap, flex-end, flex-start);
-            @include each(width, 420px, 273px);
-            @include each(height, 620px, 403px);
-            @include each(padding-left, 40px, 25px);
-            @include each(padding-right, 40px, 25px);
-            @include each(padding-bottom, 100px, 65px);
-            @include each(border-radius, 60px, 39px);
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            color: #fff;
-            cursor: pointer;
-            transition: filter 0.3s ease-in-out;
-            @for $i from 1 through 5 {
-                &:nth-child(#{$i}) {
-                    background-image: url("../images/fulfillment#{$i}.jpg");
+        .fullfillment_new_container_background {
+            .swiper-slide {
+                position: relative;
+                z-index: 9999;
+                counter-increment: numbering;
+                @include flex(column, nowrap, flex-end, flex-start);
+                @include each(width, 420px, 273px);
+                @include each(height, 620px, 403px);
+                @include each(padding-left, 40px, 25px);
+                @include each(padding-right, 40px, 25px);
+                @include each(padding-bottom, 100px, 65px);
+                @include each(border-radius, 60px, 39px);
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center;
+                color: #fff;
+                cursor: pointer;
+                transition: filter 0.3s ease-in-out;
+                @for $i from 1 through 5 {
+                    &:nth-child(#{$i}) {
+                        background-image: url("../images/fulfillment#{$i}.jpg");
+                    }
                 }
-            }
-
-            &:nth-child(1) {
-                @include each(width, calc(420px + 15px), 273px);
-                border-right: 20px solid;
-            }
-
-            &:nth-child(2), &:nth-child(3), &:nth-child(4) {
-                @include each(width, calc(420px + 30px), 273px);
-                border-left: 20px solid;
-                border-right: 20px solid;
-                margin-left: -1px;
-            }
-
-            &:nth-child(5) {
-                @include each(width, calc(420px + 15px), 273px);
-                border-left: 20px solid;
-                margin-left: -1px;
-            }
-
-
-            &:nth-child(1) p {
-                @include each(top, 116px, 76px);
-            }
-            &:nth-child(2) p,
-            &:nth-child(3) p {
-                @include each(top, 108px, 71px);
-            }
-            &:nth-child(4) p,
-            &:nth-child(5) p {
-                @include each(top, 64px, 42px);
-            }
-            &:nth-child(4) p.lang-ko,
-            &:nth-child(5) p.lang-ko {
-                @include each(top, 108px, 71px);
-            }
-            &:nth-child(4) p.lang-zh,
-            &:nth-child(5) p.lang-zh {
-                @include each(top, 108px, 71px);
-            }
-            &:nth-child(4) p {
-                @include each(font-size, 30px, 14px);
-                // line-height: 36px;
-            }
-
-            &:nth-child(5) p {
-                @include each(font-size, 28px, 14px);
-                line-height: 36px;
-            }
-            &:hover,
-            &:focus {
-                filter: grayscale(1);
-                transition: filter 0.3s ease;
-                p {
-                    opacity: 1;
+    
+                &:nth-child(1) {
+                    @include each(width, calc(420px), 273px);
+                    // border-right: 20px solid;
+                    margin-right: 20px;
                 }
-            }
-            @include middle {
-                &.swiper-slide-active {
+    
+                &:nth-child(2), &:nth-child(3), &:nth-child(4) {
+                    @include each(width, calc(420px), 273px);
+                    // border-left: 20px solid;
+                    // border-right: 20px solid;
+                    margin-right: 20px;
+                    margin-left: 20px;
+                }
+    
+                &:nth-child(5) {
+                    @include each(width, calc(420px), 273px);
+                    // border-left: 20px solid;
+                    margin-left:20px;
+                }
+    
+    
+                &:nth-child(1) p {
+                    @include each(top, 116px, 76px);
+                }
+                &:nth-child(2) p,
+                &:nth-child(3) p {
+                    @include each(top, 108px, 71px);
+                }
+                &:nth-child(4) p,
+                &:nth-child(5) p {
+                    @include each(top, 64px, 42px);
+                }
+                &:nth-child(4) p.lang-ko,
+                &:nth-child(5) p.lang-ko {
+                    @include each(top, 108px, 71px);
+                }
+                &:nth-child(4) p.lang-zh,
+                &:nth-child(5) p.lang-zh {
+                    @include each(top, 108px, 71px);
+                }
+                &:nth-child(4) p {
+                    @include each(font-size, 30px, 14px);
+                    // line-height: 36px;
+                }
+    
+                &:nth-child(5) p {
+                    @include each(font-size, 28px, 14px);
+                    line-height: 36px;
+                }
+                &:hover,
+                &:focus {
                     filter: grayscale(1);
+                    transition: filter 0.3s ease;
                     p {
                         opacity: 1;
                     }
                 }
-            }
-            &::before {
-                content: "0" counter(numbering);
-                position: absolute;
-                @include each(bottom, -23px, -15px);
-                //font-family: 'Futura Std', sans-serif;
-                font-weight: 600;
-                @include each(font-size, 100px, 65px);
-            }
-            h3 {
-                @include each(padding-left, 21px, 14px);
-                border-left: 1px solid rgba(255, 255, 255, 0.5);
-                @include each(font-size, 20px, 14px);
-                font-weight: 400;
-                small {
-                    display: block;
-                    @include each(margin-bottom, 10px, 6px);
-                    @include each(font-size, 18px, 12px);
-                    font-weight: 300;
-                    text-transform: uppercase;
+                @include middle {
+                    &.swiper-slide-active {
+                        filter: grayscale(1);
+                        p {
+                            opacity: 1;
+                        }
+                    }
                 }
-            }
-            p {
-                position: absolute;
-                @include each(left, 40px, 25px);
-                @include each(right, 40px, 25px);
-                @include each(font-size, 32px, 21px);
-                line-height: 1.25;
-                font-weight: 700;
-                opacity: 0;
-                transition: all 0.3s ease-in-out;
-                
-                lang-ko-quot-begin {
-                    color: #FFF;
-                    leading-trim: both;
-                    text-edge: cap;
-                    font-family: "Reddit Mono";
-                    font-size: 64px;
-                    font-style: normal;
-                    font-weight: 700;
-                    line-height: 20px; /* 62.5% */
-                    letter-spacing: -0.32px;
+                &::before {
+                    content: "0" counter(numbering);
+                    position: absolute;
+                    @include each(bottom, -23px, -15px);
+                    //font-family: 'Futura Std', sans-serif;
+                    font-weight: 600;
+                    @include each(font-size, 100px, 65px);
                 }
-
-
-                lang-ko-quot-end {
-                    color: #FFF;
-                    leading-trim: both;
-                    text-edge: cap;
-                    font-family: "Reddit Mono";
-                    font-size: 64px;
-                    font-style: normal;
-                    font-weight: 700;
-                    line-height: 150px; /* 62.5% */
-                    letter-spacing: -0.32px;
-                }
-
-                lang-ko {
-                    color: #FFF;
-                    leading-trim: both;
-                    text-edge: cap;
-                    font-family: NanumMyeongjo;
-                    font-size: 25px;
-                    font-style: normal;
+                h3 {
+                    @include each(padding-left, 21px, 14px);
+                    border-left: 1px solid rgba(255, 255, 255, 0.5);
+                    @include each(font-size, 20px, 14px);
                     font-weight: 400;
-                    line-height: 40px;
-                    letter-spacing: -0.125px;
+                    small {
+                        display: block;
+                        @include each(margin-bottom, 10px, 6px);
+                        @include each(font-size, 18px, 12px);
+                        font-weight: 300;
+                        text-transform: uppercase;
+                    }
                 }
-
-                lang-zh-quot-begin {
-                    color: #FFF;
-                    leading-trim: both;
-                    text-edge: cap;
-                    font-family: "Reddit Mono";
-                    font-size: 64px;
-                    font-style: normal;
+                p {
+                    position: absolute;
+                    @include each(left, 40px, 25px);
+                    @include each(right, 40px, 25px);
+                    @include each(font-size, 32px, 21px);
+                    line-height: 1.25;
                     font-weight: 700;
-                    line-height: 20px; /* 62.5% */
-                    letter-spacing: -0.32px;
-                    // margin-left: -45px;
+                    opacity: 0;
+                    transition: all 0.3s ease-in-out;
+                    
+                    lang-ko-quot-begin {
+                        color: #FFF;
+                        leading-trim: both;
+                        text-edge: cap;
+                        font-family: "Reddit Mono";
+                        font-size: 64px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: 20px; /* 62.5% */
+                        letter-spacing: -0.32px;
+                    }
+    
+    
+                    lang-ko-quot-end {
+                        color: #FFF;
+                        leading-trim: both;
+                        text-edge: cap;
+                        font-family: "Reddit Mono";
+                        font-size: 64px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: 150px; /* 62.5% */
+                        letter-spacing: -0.32px;
+                    }
+    
+                    lang-ko {
+                        color: #FFF;
+                        leading-trim: both;
+                        text-edge: cap;
+                        font-family: NanumMyeongjo;
+                        font-size: 25px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 40px;
+                        letter-spacing: -0.125px;
+                    }
+    
+                    lang-zh-quot-begin {
+                        color: #FFF;
+                        leading-trim: both;
+                        text-edge: cap;
+                        font-family: "Reddit Mono";
+                        font-size: 64px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: 20px; /* 62.5% */
+                        letter-spacing: -0.32px;
+                        // margin-left: -45px;
+                    }
+    
+                    lang-zh-quot-end {
+                        color: #FFF;
+                        leading-trim: both;
+                        text-edge: cap;
+                        font-family: "Reddit Mono";
+                        font-size: 64px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: 150px; /* 62.5% */
+                        letter-spacing: -0.32px;
+                    }
+    
+                    lang-zh {
+                        color: #FFF;
+                        leading-trim: both;
+                        text-edge: cap;
+                        font-family: NanumMyeongjo;
+                        font-size: 25px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 40px;
+                        letter-spacing: -0.125px;
+                    }
                 }
-
-                lang-zh-quot-end {
-                    color: #FFF;
-                    leading-trim: both;
-                    text-edge: cap;
-                    font-family: "Reddit Mono";
-                    font-size: 64px;
-                    font-style: normal;
-                    font-weight: 700;
-                    line-height: 150px; /* 62.5% */
-                    letter-spacing: -0.32px;
+    
+                p.safari_style > lang-ko-quot-begin {
+                    margin-left: -45px;
                 }
-
-                lang-zh {
-                    color: #FFF;
-                    leading-trim: both;
-                    text-edge: cap;
-                    font-family: NanumMyeongjo;
-                    font-size: 25px;
-                    font-style: normal;
-                    font-weight: 400;
-                    line-height: 40px;
-                    letter-spacing: -0.125px;
+    
+                p.safari_style > lang-zh-quot-begin {
+                    margin-left: -45px;
                 }
-            }
-
-            p.safari_style > lang-ko-quot-begin {
-                margin-left: -45px;
-            }
-
-            p.safari_style > lang-zh-quot-begin {
-                margin-left: -45px;
             }
         }
     }
