--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1055,6 +1055,19 @@ body {
   overflow-x: hidden;
 }
 
+.screen-size-overlay {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+  color: white;
+  padding: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  border-radius: 5px;
+  z-index: 1000; /* Ensure it appears above other elements */
+}
+
 #header,
 #header > div > div {
   transition: all 0.3s ease-in-out;
@@ -1841,12 +1854,22 @@ body {
     font-size: 56px;
   }
 }
-@media (max-width: 1280px) {
+@media (max-width: 1366px) {
   .howitworks .swiper .swiper-slide h2 {
     font-size: 48px;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h2 {
+    font-size: 29px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper .swiper-slide h2 {
+    font-size: 29px;
+  }
+}
+@media (max-width: 744px) {
   .howitworks .swiper .swiper-slide h2 {
     font-size: 29px;
   }
@@ -1856,9 +1879,29 @@ body {
     font-size: 29px;
   }
 }
-@media (max-width: 360px) {
+@media (min-width: 1281px) and (max-height: 748px) {
   .howitworks .swiper .swiper-slide h2 {
-    font-size: 29px;
+    font-size: 43.2px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 648px) {
+  .howitworks .swiper .swiper-slide h2 {
+    font-size: 38.4px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 548px) {
+  .howitworks .swiper .swiper-slide h2 {
+    font-size: 33.6px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h2 {
+    font-size: 26.1px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h2 {
+    font-size: 23.2px;
   }
 }
 @media (min-width: 1921px) {
@@ -1876,12 +1919,22 @@ body {
     line-height: 70px;
   }
 }
-@media (max-width: 1280px) {
+@media (max-width: 1366px) {
   .howitworks .swiper .swiper-slide h2 {
     line-height: 60px;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h2 {
+    line-height: 36px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper .swiper-slide h2 {
+    line-height: 36px;
+  }
+}
+@media (max-width: 744px) {
   .howitworks .swiper .swiper-slide h2 {
     line-height: 36px;
   }
@@ -1891,9 +1944,29 @@ body {
     line-height: 36px;
   }
 }
-@media (max-width: 360px) {
+@media (min-width: 1281px) and (max-height: 748px) {
   .howitworks .swiper .swiper-slide h2 {
-    line-height: 36px;
+    line-height: 54px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 648px) {
+  .howitworks .swiper .swiper-slide h2 {
+    line-height: 48px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 548px) {
+  .howitworks .swiper .swiper-slide h2 {
+    line-height: 42px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h2 {
+    line-height: 32.4px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h2 {
+    line-height: 28.8px;
   }
 }
 @media (min-width: 1921px) {
@@ -1911,12 +1984,22 @@ body {
     padding-top: 100px;
   }
 }
-@media (max-width: 1280px) {
+@media (max-width: 1366px) {
   .howitworks .swiper .swiper-slide h2 {
     padding-top: 100px;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h2 {
+    padding-top: 20px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper .swiper-slide h2 {
+    padding-top: 20px;
+  }
+}
+@media (max-width: 744px) {
   .howitworks .swiper .swiper-slide h2 {
     padding-top: 20px;
   }
@@ -1926,9 +2009,29 @@ body {
     padding-top: 20px;
   }
 }
-@media (max-width: 360px) {
+@media (min-width: 1281px) and (max-height: 748px) {
   .howitworks .swiper .swiper-slide h2 {
-    padding-top: 20px;
+    padding-top: 90px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 648px) {
+  .howitworks .swiper .swiper-slide h2 {
+    padding-top: 80px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 548px) {
+  .howitworks .swiper .swiper-slide h2 {
+    padding-top: 70px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h2 {
+    padding-top: 18px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h2 {
+    padding-top: 16px;
   }
 }
 @media (min-width: 1921px) {
@@ -1966,34 +2069,44 @@ body {
     max-width: 294px;
   }
 }
-@media (max-width: 480px) and (min-height: 749px) {
+@media (max-width: 480px) {
   .howitworks .swiper .swiper-slide h2 {
     max-width: 294px;
   }
 }
-@media (max-height: 748px) {
+@media (min-width: 1921px) {
   .howitworks .swiper .swiper-slide h2 {
-    max-width: 50vh;
+    letter-spacing: 0px;
   }
 }
-@media (max-height: 440px) {
+@media (max-width: 1920px) {
   .howitworks .swiper .swiper-slide h2 {
-    max-width: 0px;
+    letter-spacing: 0px;
   }
 }
-@media (min-width: 1281px) {
+@media (max-width: 1440px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: 0px;
+  }
+}
+@media (max-width: 1366px) {
   .howitworks .swiper .swiper-slide h2 {
     letter-spacing: 0px;
   }
 }
 @media (max-width: 1280px) {
   .howitworks .swiper .swiper-slide h2 {
-    letter-spacing: 0px;
+    letter-spacing: -0.29px;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 960px) {
   .howitworks .swiper .swiper-slide h2 {
-    letter-spacing: 0px;
+    letter-spacing: -0.29px;
+  }
+}
+@media (max-width: 744px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: -0.29px;
   }
 }
 @media (max-width: 480px) {
@@ -2001,19 +2114,172 @@ body {
     letter-spacing: -0.29px;
   }
 }
+@media (min-width: 1281px) and (max-height: 748px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: 0px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 648px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: 0px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 548px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: 0px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: -0.261px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h2 {
+    letter-spacing: -0.232px;
+  }
+}
 .howitworks .swiper .swiper-slide h3 {
-  margin-top: 30px;
   color: #FFF;
   leading-trim: both;
   text-edge: cap;
   font-family: Poppins;
-  font-size: 21px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
 }
 @media (min-width: 1921px) {
   .howitworks .swiper .swiper-slide h3 {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 1920px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 1440px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 1366px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 744px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 30px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 30px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 748px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 27px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 648px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 24px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 548px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 21px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 27px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h3 {
+    margin-top: 24px;
+  }
+}
+@media (min-width: 1921px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 21px;
+  }
+}
+@media (max-width: 1920px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 21px;
+  }
+}
+@media (max-width: 1440px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 21px;
+  }
+}
+@media (max-width: 1366px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 21px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 21px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 21px;
+  }
+}
+@media (max-width: 744px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 21px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 21px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 748px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 18.9px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 648px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 16.8px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 548px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 14.7px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 18.9px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide h3 {
+    font-size: 16.8px;
+  }
+}
+@media (min-width: 1921px) {
+  .howitworks .swiper .swiper-slide h3 {
     max-width: 610px;
   }
 }
@@ -2027,12 +2293,22 @@ body {
     max-width: 420px;
   }
 }
-@media (max-width: 1280px) {
+@media (max-width: 1366px) {
   .howitworks .swiper .swiper-slide h3 {
     max-width: 400px;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide h3 {
+    max-width: 294px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper .swiper-slide h3 {
+    max-width: 294px;
+  }
+}
+@media (max-width: 744px) {
   .howitworks .swiper .swiper-slide h3 {
     max-width: 294px;
   }
@@ -2042,21 +2318,144 @@ body {
     max-width: 294px;
   }
 }
-@media (max-width: 360px) {
-  .howitworks .swiper .swiper-slide h3 {
-    max-width: 294px;
-  }
-}
 .howitworks .swiper .swiper-slide p {
-  margin-top: 20px;
   color: #FFF;
   leading-trim: both;
   text-edge: cap;
   font-family: Poppins;
-  font-size: 18px;
   font-style: normal;
   font-weight: 300;
   line-height: 30px; /* 166.667% */
+}
+@media (min-width: 1921px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 1920px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 1440px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 1366px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 744px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 20px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 748px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 18px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 648px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 16px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 548px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 14px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 18px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide p {
+    margin-top: 16px;
+  }
+}
+@media (min-width: 1921px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1920px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1440px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1366px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 744px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 480px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 18px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 748px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 16.2px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 648px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 14.4px;
+  }
+}
+@media (min-width: 1281px) and (max-height: 548px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 12.6px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 16.2px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide p {
+    font-size: 14.4px;
+  }
 }
 @media (min-width: 1921px) {
   .howitworks .swiper .swiper-slide p {
@@ -2073,22 +2472,27 @@ body {
     max-width: 420px;
   }
 }
-@media (max-width: 1280px) {
+@media (max-width: 1366px) {
   .howitworks .swiper .swiper-slide p {
     max-width: 400px;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide p {
+    max-width: 294px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper .swiper-slide p {
+    max-width: 294px;
+  }
+}
+@media (max-width: 744px) {
   .howitworks .swiper .swiper-slide p {
     max-width: 294px;
   }
 }
 @media (max-width: 480px) {
-  .howitworks .swiper .swiper-slide p {
-    max-width: 294px;
-  }
-}
-@media (max-width: 360px) {
   .howitworks .swiper .swiper-slide p {
     max-width: 294px;
   }
@@ -2119,12 +2523,22 @@ body {
     bottom: 100px;
   }
 }
-@media (max-width: 1280px) {
+@media (max-width: 1366px) {
   .howitworks .swiper .swiper-slide div {
     bottom: 100px;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 1280px) {
+  .howitworks .swiper .swiper-slide div {
+    bottom: 80px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper .swiper-slide div {
+    bottom: 80px;
+  }
+}
+@media (max-width: 744px) {
   .howitworks .swiper .swiper-slide div {
     bottom: 80px;
   }
@@ -2134,9 +2548,14 @@ body {
     bottom: 80px;
   }
 }
-@media (max-width: 360px) {
+@media (max-width: 480px) and (max-height: 700px) {
   .howitworks .swiper .swiper-slide div {
-    bottom: 80px;
+    bottom: 88px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide div {
+    bottom: 96px;
   }
 }
 @media (min-width: 1921px) {
@@ -2171,17 +2590,27 @@ body {
 }
 @media (max-width: 744px) {
   .howitworks .swiper .swiper-slide div {
-    height: 230px;
+    height: 210px;
   }
 }
-@media (max-width: 480px) and (min-height: 749px) {
+@media (max-width: 480px) {
   .howitworks .swiper .swiper-slide div {
     height: 180px;
   }
 }
-@media (max-height: 748px) {
+@media (min-width: 481px) and (max-height: 748px) {
   .howitworks .swiper .swiper-slide div {
-    height: 50vh;
+    height: 30vh;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide div {
+    height: 189px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide div {
+    height: 168px;
   }
 }
 @media (max-height: 440px) {
@@ -2221,17 +2650,27 @@ body {
 }
 @media (max-width: 744px) {
   .howitworks .swiper .swiper-slide div {
-    width: 230px;
+    width: 210px;
   }
 }
-@media (max-width: 480px) and (min-height: 749px) {
+@media (max-width: 480px) {
   .howitworks .swiper .swiper-slide div {
     width: 180px;
   }
 }
-@media (max-height: 748px) {
+@media (min-width: 481px) and (max-height: 748px) {
   .howitworks .swiper .swiper-slide div {
-    width: 50vh;
+    width: 30vh;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide div {
+    width: 189px;
+  }
+}
+@media (max-width: 480px) and (max-height: 700px) {
+  .howitworks .swiper .swiper-slide div {
+    width: 168px;
   }
 }
 @media (max-height: 440px) {
@@ -2274,19 +2713,9 @@ body {
     margin-left: 214px;
   }
 }
-@media (max-width: 480px) and (min-height: 749px) {
+@media (max-width: 480px) {
   .howitworks .swiper .swiper-slide div {
     margin-left: 124px;
-  }
-}
-@media (max-height: 748px) {
-  .howitworks .swiper .swiper-slide div {
-    margin-left: 50vh;
-  }
-}
-@media (max-height: 440px) {
-  .howitworks .swiper .swiper-slide div {
-    margin-left: 0px;
   }
 }
 @media (min-width: 1921px) {
@@ -2304,22 +2733,27 @@ body {
     margin-right: 103px;
   }
 }
-@media (max-width: 1280px) {
+@media (max-width: 1366px) {
   .howitworks .swiper-pagination {
     margin-right: 60px;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 1280px) {
+  .howitworks .swiper-pagination {
+    margin-right: 20px;
+  }
+}
+@media (max-width: 960px) {
+  .howitworks .swiper-pagination {
+    margin-right: 20px;
+  }
+}
+@media (max-width: 744px) {
   .howitworks .swiper-pagination {
     margin-right: 20px;
   }
 }
 @media (max-width: 480px) {
-  .howitworks .swiper-pagination {
-    margin-right: 20px;
-  }
-}
-@media (max-width: 360px) {
   .howitworks .swiper-pagination {
     margin-right: 20px;
   }
