--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -27,7 +27,9 @@ body {
     overflow-x: hidden;
 }
 
+// For debug
 .screen-size-overlay {
+    display: none;
     position: absolute;
     bottom: 0;
     right: 0;
