--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -741,8 +741,10 @@ body {
             // font-size: 18px;
             font-style: normal;
             font-weight: 300;
-            line-height: 30px; /* 166.667% */
+            line-height: normal; /* 166.667% */
+            
             // max-width: calc(717px + $extra_text_box_padding);
+            @include each88_font(line-height, 30px, normal, normal, normal, normal, normal, normal, normal);
             @include each88_font(margin-top, 20px, 20px, 20px, 20px, 20px, 20px, 20px, 20px);
             @include each88_font(font-size, 18px, 18px, 18px, 18px, 18px, 18px, 18px, 18px);
             @include each88(max-width, 610px, 450px, 420px, 400px, 294px, 294px, 294px, 294px);
@@ -1244,7 +1246,7 @@ body {
                     color: rgb($primary-color-en, 0.2);
                     font-family: Poppins;
                     // font-size: 125px;
-                    @include each4(font-size, 125px, 125px, 85px, 85px);
+                    @include each4(font-size, 125px, 125px, 85px, 60px);
                     font-style: normal;
                     font-weight: 700; 
                 }
@@ -1260,7 +1262,8 @@ body {
                     margin-top: 30px;
                     color: $primary-color-en;
                     font-family: Poppins;
-                    font-size: 36px;
+                    // font-size: 36px;
+                    @include each(font-size, 36px, 22px);
                     font-style: normal;
                     font-weight: 400;
                 }
@@ -1377,6 +1380,7 @@ body {
             width: 100%;
             max-width: 430px;
         }
+
         h2 {
             @include each(font-size, 180px, 110px);
             color: $primary-color-en;
@@ -1586,7 +1590,7 @@ body {
                         font-size: 64px;
                         font-style: normal;
                         font-weight: 700;
-                        line-height: 150px; /* 62.5% */
+                        line-height:100px; /* 62.5% */
                         letter-spacing: -0.32px;
                     }
     
@@ -1675,6 +1679,11 @@ body {
             width: 100%;
             max-width: 430px;
         }
+
+        dl {
+            max-width: 410px;
+        }
+
         h2 {
             @include each(font-size, 180px, 110px);
             color: $primary-color-en;
@@ -1769,13 +1778,43 @@ body {
             &:nth-child(3) p {
                 @include each(top, 108px, 71px);
             }
-            &:nth-child(4) p,
-            &:nth-child(5) p {
+            &:nth-child(4) p {
                 @include each(top, 64px, 42px);
             }
             &:nth-child(5) p {
+                @include each(top, 64px, 42px);
                 @include each(font-size, 22px, 14px);
                 line-height: 1.6;
+            }
+
+            &:nth-child(4) p.lang-ko {
+                @include each(top, 108px, 71px);
+            }
+            &:nth-child(5) p.lang-ko {
+                @include each(top, 108px, 71px);
+                padding-right:1px;
+            }
+
+            &:nth-child(4) p > lang-ko {
+                font-size: 16.0px;
+                line-height: 25px;
+            }
+
+            &:nth-child(5) p > lang-ko {
+                font-size: 16.0px;
+                line-height: 25px;
+            }
+
+
+            &:nth-child(4) p.lang-zh,
+            &:nth-child(5) p.lang-zh {
+                @include each(top, 108px, 71px);
+            }
+
+            &:nth-child(5) p.lang-ko {
+                @include each(font-size, 22px, 10px);
+                line-height: 1.6;
+
             }
             &:hover,
             &:focus {
@@ -1822,6 +1861,80 @@ body {
                 font-weight: 700;
                 opacity: 0;
                 transition: all 0.3s ease-in-out;
+
+                lang-ko-quot-begin {
+                    color: #FFF;
+                    leading-trim: both;
+                    text-edge: cap;
+                    font-family: "Reddit Mono";
+                    font-size: 32px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 20px; /* 62.5% */
+                    letter-spacing: -0.32px;
+                }
+
+
+                lang-ko-quot-end {
+                    color: #FFF;
+                    leading-trim: both;
+                    text-edge: cap;
+                    font-family: "Reddit Mono";
+                    font-size: 32px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 40px; /* 62.5% */
+                    letter-spacing: -0.32px;
+                }
+
+                lang-ko {
+                    color: #FFF;
+                    leading-trim: both;
+                    text-edge: cap;
+                    font-family: NanumMyeongjo;
+                    font-size: 17px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 30px;
+                    letter-spacing: -0.125px;
+                }
+
+                lang-zh-quot-begin {
+                    color: #FFF;
+                    leading-trim: both;
+                    text-edge: cap;
+                    font-family: "Reddit Mono";
+                    font-size: 32px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 20px; /* 62.5% */
+                    letter-spacing: -0.32px;
+                    // margin-left: -45px;
+                }
+
+                lang-zh-quot-end {
+                    color: #FFF;
+                    leading-trim: both;
+                    text-edge: cap;
+                    font-family: "Reddit Mono";
+                    font-size: 32px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 40px; /* 62.5% */
+                    letter-spacing: -0.32px;
+                }
+
+                lang-zh {
+                    color: #FFF;
+                    leading-trim: both;
+                    text-edge: cap;
+                    font-family: NanumMyeongjo;
+                    font-size: 17px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 40px;
+                    letter-spacing: -0.125px;
+                }
             }
         }
     }
